--- a/pages/general.html
+++ b/pages/general.html
@@ -1,28 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    
+
     <header>
         <a href="/index.html">INICIO</a>
         <!-- info del juego -->
         <a href="../pages/general.html">GENERAL</a>
-    <!-- fantasmas con todo el detalle -->
+        <!-- fantasmas con todo el detalle -->
         <a href="../pages/fantasmas.html">FANTASMAS</a>
-    <!-- un resumen -->
+        <!-- un resumen -->
         <a href="../pages/resumen.html">RESUMEN</a>
         <!-- va a marcar solo la info querida -->
         <a href="../pages/destacada.html">DESTACADA</a>
     </header>
 
-   
 
-        
+    <main class="main-2">
+        <h1>Bienvenidos</h1>
+        <section>
+            <div class="div-1">
+                <img src="../media/banshee.png" alt="Banshee">
+            </div>
+            <div class="div-1">
+                <img src="../media/demonio.png" alt="Demonio">
+            </div>
+            <div class="div-1">
+                <img src="../media/deogen.png" alt="Deogen">
+            </div>
+            <div class="div-1">
+                <img src="../media/ente.png" alt="Ente">
+            </div>
+            <div class="div-1">
+                <img src="../media/espectro.png" alt="Espectro">
+            </div>
+            <div class="div-1">
+                <img src="../media/espiritu.png" alt="Espiritu">
+            </div>
+            <div class="div-1">
+                <img src="../media/gemelos.png" alt="Gemelos">
+            </div>
+            <div class="div-1">
+                <img src="../media/goryo.png" alt="Goryo">
+            </div>
+            <div class="div-1">
+                <img src="../media/hantu.png" alt="Hantu">
+            </div>
+            <div class="div-1">
+                <img src="../media/jinn.png" alt="Jinn">
+            </div>
+            <div class="div-1">
+                <img src="../media/mimico.png" alt="Mimico">
+            </div>
+            <div class="div-1">
+                <img src="../media/moroi.png" alt="Moroi">
+            </div>
+            <div class="div-1">
+                <img src="../media/myling.png" alt="Myling">
+            </div>
+            <div class="div-1">
+                <img src="../media/obake.png" alt="Obake">
+            </div>
+            <div class="div-1">
+                <img src="../media/oni.png" alt="Oni">
+            </div>
+            <div class="div-1">
+                <img src="../media/onryo.png" alt="Onryo">
+            </div>
+            <div class="div-1">
+                <img src="../media/pesadilla.png" alt="Pesadilla">
+            </div>
+            <div class="div-1">
+                <img src="../media/poltergeist.png" alt="Poltegeist">
+            </div>
+            <div class="div-1">
+                <img src="../media/raiju.png" alt="Raiju">
+            </div>
+            <div class="div-1">
+                <img src="../media/revenant.png" alt="Revenant">
+            </div>
+            <div class="div-1">
+                <img src="../media/sombra.png" alt="Sombra">
+            </div>
+            <div class="div-1">
+                <img src="../media/thaye.png" alt="Thaye">
+            </div>
+            <div class="div-1">
+                <img src="../media/yokai.png" alt="Yokai">
+            </div>
+            <div class="div-1">
+                <img src="../media/yurei.png" alt="Yurei">
+            </div>
+        </section>
+
+
 
 
 
@@ -32,5 +110,13 @@
     </main>
 
 
+
+
+
+
+
+
+
 </body>
+
 </html>
