--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -1,31 +1,238 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumen</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&family=Rubik+Bubbles&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
 
     <header>
         <a href="/index.html">INICIO</a>
         <!-- info del juego -->
         <a href="../pages/general.html">GENERAL</a>
-    <!-- fantasmas con todo el detalle -->
+        <!-- fantasmas con todo el detalle -->
         <a href="../pages/fantasmas.html">FANTASMAS</a>
-    <!-- un resumen -->
+        <!-- un resumen -->
         <a href="../pages/resumen.html">RESUMEN</a>
         <!-- va a marcar solo la info querida -->
         <a href="../pages/destacada.html">DESTACADA</a>
     </header>
 
 
+    <main class="main-3">
+
+        <section>
+
+
+            <div>
+                <h2>Banshee</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Realiza un tp, Mayor posibilidad de cantar</li>
+                    <li>Caracteristica: Sonido con antena parabolica</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Demonio</h2>
+                <ul>
+                    <li>Cordura: -100%</li>
+                    <li>Caza: Realiza un tp, Solo tiene que esperar 20 segundos entre ataque</li>
+                    <li>Caracteristica: Realiza mas ataques, </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Deogen</h2>
+                <ul>
+                    <li>Cordura: -40%</li>
+                    <li>Caza: Mientras mas lejos mas rapido,</li>
+                    <li>Caracteristica: Por la spirit box realiza un sonido de aliento</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Ente</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Realiza un tp</li>
+                    <li>Caracteristica: Al sacar una foto no aparece</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Espectro</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Se teletransporta, Mayor posibilidad de aparecer como sombra</li>
+                    <li>Caracteristica: No pisa la sal.</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Espiritu</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Al tener -25% de cordura realiza ataques cada 25s</li>
+                    <li>Caracteristica: Al utilizar incienso tardara 3m en atacar nuevamente</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Gemelos</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Un gemelo es -10% mas lento y el otro 10% mas rapido</li>
+                    <li>Caracteristica: Tocan cosas casi al mismo tiempo en lugares diferentes, La grafica marca una curva cuando interactuan al mismo tiempo</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Goryo</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caracteristica: Solo se muestra el D.O.T.S si nop hay nadie en la habitacion y atraves de una camara</li>
+                    <li>Prueba obligatoria: D.O.T.S</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Hantu</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Cuanto más frio haga en las habitaciones más rápido se moverá en ataqu</li>
+                    <li>Caracteristica: Suele tirar mucho los plomos de la casa</li>
+                    <li>Prueba Obligatoria: Temperaturas heladas</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Jinn</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Tiene una habilidad que con el cuadro eléctrico encendido puede acelerar al ver a su objetivo, cuanto mas lejos este su objetivo mas acelerara</li>
+                    <li>Caracteristica: Nunca apagara el cuadro eléctrico, Una de sus habilidades es quitar un 25% de cordura al interactuar con el cuadro eléctrico sin desconectarlo</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Mimico</h2>
+                <ul>
+                    <li>Cordura: Depende</li>
+                    <li>Caza: </li>
+                    <li>Caracteristica: Cambia de fantasma en un intervalo de 35 segundos a 2 minutos, Orbes espectrales cerca</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Moroi</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: El incienso le afecta 9 segundos</li>
+                    <li>Caracteristica: El incienso le afecta 9 segundos Pone una maldición y baja la cordura si te responde por la spirit o parabólico que se para al salir d ela casa y termina al tomar pastillas</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Myling</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Antes de realizar caza, realiza muchos eventos de aparición e interactúa mucho</li>
+                    <li>Caracteristica: Solo se lo escucha si esta cerca </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Obake</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caracteristica: Tiene posibilidad de dejar huellas y pueden ser con 6 dedos</li>
+                    <li>Prueba Obligatoria: Huellas dactilares</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Oni</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Casi siempre sera visible ya que parpadea muy poco</li>
+                    <li>Caracteristica: En el evento de nube con en soplido este no se vera, mientras mas personas mas actividad</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Onryo</h2>
+                <ul>
+                    <li>Cordura: 100% si apaga alguna fuente de fuego, vela, mechero. 60% sin su habilidad</li>
+                    <li>Caza: Si apaga una vela puede atacar</li>
+                    <li>Caracteristica: No ataca si hay mas velas</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Pesadilla</h2>
+                <ul>
+                    <li>Cordura: 60% con luces apagadas, 40% con luces encendidas</li>
+                    <li>Caracteristica: Nunca prendera una luz</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Poltergeist</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Lanza los objetos lejos</li>
+                    <li>Caracteristica: Puede mover mas de 1 objeto a la vez y los lanza lejos y quita cordura por cada objeto movido</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Raiju</h2>
+                <ul>
+                    <li>Cordura: 65% con 1 aparato electrónico. Sin objeto electrónico en su zona, 50%</li>
+                    <li>Caza: Mientras mas aparatos electronicos encendidos mas rapido es</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Revenant</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caza: Si te ve es rapido pero cuando se acerca es muy lento</li>
+                    <li>Caracteristica: Da 1 paso cada 2s, con algun aparato electronico prendido contara como que te vio y correra</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Sombra</h2>
+                <ul>
+                    <li>Cordura: -35%</li>
+                    <li>Caza: porcentaje mayor de que sus apariciones sean modo sombra.</li>
+                    <li>Caracteristica: 0% posibilidad de hacer aparición con 100% de cordura, nunca ataca cuando hay mas de 1 persona en la habitacion ni tampoco dara las pruebas, mientras menos cordura mas apariciones
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Thaye</h2>
+                <ul>
+                    <li>Cordura: 75% si no ha envejecido nada</li>
+                    <li>Caracteristica: puede envejecer más de 10 veces, perdiendo % de ataque de cordura y de velocidad en cada ocasión. Hay que estar cerca de el cuando vaya a envejecer que lo suele hacer entre 1 y 2 minutos de tiempo, Cuanto mas tiempo pases en su habitación mas rápido envejece y menos ataques realizara</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Yokai</h2>
+                <ul>
+                    <li>Cordura: 80% si alguien habla cerca de su radio de ataque, 50% sin su habilidad</li>
+                    <li>Caracteristica: Solo te escuchara si hablas estando cerca</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Yurei</h2>
+                <ul>
+                    <li>Cordura: -50%</li>
+                    <li>Caracteristica: Te cierra una puerta sin ningun evento quitandote 15% de cordura</li>
+                </ul>
+            </div>
+
+
+        </section>
+
+
+
+    </main>
 
 
 
 
 
-    
 </body>
+
 </html>
