Realizo algunos cambios, Termino Guia y Objetos

--- a/pages/evidencias.html
+++ b/pages/evidencias.html
@@ -19,11 +19,11 @@
         <!-- info del juego -->
         <a href="../pages/general.html">GENERAL</a>
         <!-- fantasmas con todo el detalle -->
-        <a href="../pages/fantasmas.html">FANTASMAS</a>
+        <a href="../pages/guias.html">GUIAS</a>
         <!-- un resumen -->
-        <a href="../pages/resumen.html">RESUMEN</a>
+        <a href="../pages/evidencias.html">EVIDENCIAS</a>
         <!-- va a marcar solo la info querida -->
-        <a href="../pages/destacada.html">DESTACADA</a>
+        <a href="../pages/objetos.html">OBJETOS</a>
     </header>
 
 
