--- a/pages/general.html
+++ b/pages/general.html
@@ -15,16 +15,15 @@
         <!-- info del juego -->
         <a href="../pages/general.html">GENERAL</a>
         <!-- fantasmas con todo el detalle -->
-        <a href="../pages/fantasmas.html">FANTASMAS</a>
+        <a href="../pages/guias.html">GUIAS</a>
         <!-- un resumen -->
-        <a href="../pages/resumen.html">RESUMEN</a>
+        <a href="../pages/evidencias.html">EVIDENCIAS</a>
         <!-- va a marcar solo la info querida -->
-        <a href="../pages/destacada.html">DESTACADA</a>
+        <a href="../pages/objetos.html">OBJETOS</a>
     </header>
 
 
     <main class="main-2">
-        <h1>Bienvenidos</h1>
         <section>
             <div class="div-1">
                 <img src="../media/banshee.png" alt="Banshee">
