--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
+  
 </head>
 <body>
 
@@ -13,14 +14,43 @@
         <!-- info del juego -->
         <a href="./pages/general.html">GENERAL</a>
     <!-- fantasmas con todo el detalle -->
-        <a href="./pages/fantasmas.html">FANTASMAS</a>
+        <a href="./pages/guias.html">GUIAS</a>
     <!-- un resumen -->
-        <a href="./pages/resumen.html">RESUMEN</a>
+        <a href="./pages/evidencias.html">EVIDENCIAS</a>
         <!-- va a marcar solo la info querida -->
-        <a href="./pages/destacada.html">DESTACADA</a>
+        <a href="./pages/objetos.html">OBJETOS</a>
     </header>
 
   
 
+
+    <main class="main-5">
+
+        <section>
+            <div>
+                <div>
+                    <h2>hola</h2>
+                    
+                </div>
+                <div>
+                    <img src="./media/objetos/camara-1.png" alt="">
+                </div>
+            </div>
+            <div>
+                <h2>hola</h2>
+                <img src="./media/objetos/emf-1.png" alt="">
+            </div>
+            <div>
+                <h2>hola</h2>
+                <img src="./media/objetos/dots-2.png" alt="">
+            </div>
+        </section>
+
+    </main>
+
+ 
 </body>
+
+
+
 </html>
