Termino Inicio y agrego SEO

--- a/index.html
+++ b/index.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <meta name="viewport" content="Pagina de guias y noticias del juego Phasmophobia">
+    <meta name="keywords" content="Juegos, Guias, Tutoriales, Noticias, Phasmophobia, Fantasmas, Sobrenatural, Paranormal, Terror, Miedo, Muertos, Español">
+    <title>Phasmophobia Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
-  
+
 </head>
+
 <body>
 
     <header>
         <a href="/index.html">INICIO</a>
         <!-- info del juego -->
         <a href="./pages/general.html">GENERAL</a>
-    <!-- fantasmas con todo el detalle -->
+        <!-- fantasmas con todo el detalle -->
         <a href="./pages/guias.html">GUIAS</a>
-    <!-- un resumen -->
+        <!-- un resumen -->
         <a href="./pages/evidencias.html">EVIDENCIAS</a>
         <!-- va a marcar solo la info querida -->
         <a href="./pages/objetos.html">OBJETOS</a>
     </header>
 
-  
 
 
-    <main class="main-5">
 
+
+    <main class="main-4">
         <section>
-            <div>
-                <div>
-                    <h2>hola</h2>
-                    
+            <div class="main">
+                <div class="submain">
+                    <div class="area1" id="area1">
+                        <div class="info1">
+                            <h2>Trailer oficial</h2>
+                        </div>
+                        <div class="video1">
+                          
+                            <a href="https://www.youtube.com/watch?v=sRa9oeo5KiY&t=11s">
+                                <img src="https://i.ytimg.com/an_webp/sRa9oeo5KiY/mqdefault_6s.webp?du=3000&sqp=CJ7u0qsG&rs=AOn4CLAa3wK4GUS-whhmQ9TveV6hjDvTyQ"
+                                    alt="Trailer Phasmophobia">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="area" id="area2">
+                        <div class="img2">
+                            <img src="https://tse3.mm.bing.net/th?id=OIP.hEFMz388_i5biHMFy8zvSQHaEK&pid=Api&P=0&h=180"
+                                alt="Nuevos-Objetos">
+                        </div>
+                        <div class="info2">
+                            <h2>Una nueva actualizacion</h2>
+                            <p>Se a lanzado una nueva actualizacion para el juego Phasmophobia, esta es la version 1.5.6. Esta nueva actualizacion trae con sigo un nuevo sistema de objetos por nivel, puedes ver mas info <a href="./pages/objetos.html">Aqui</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="area" id="area3">
+                        <div class="img3">
+                            <img src="https://tse4.mm.bing.net/th?id=OIP.NdGdhKGpSMTvVCvuBN-jGwHaEK&pid=Api&P=0&h=180"
+                                alt="Nueva-Casa">
+                        </div>
+                        <div class="info3">
+                            <h2>Nueva Casa</h2>
+                            <p>Se a anunciado que proximamente se agregara una nueva casa exclusiva solo para la dificultad Pesadilla</p>
+                        </div>
+                    </div>
+                    <div class="area" id="area4">
+                        <div class="img4">
+                            <img src="https://tse1.mm.bing.net/th?id=OIP.cP-HwgSvysx_ZysjklzPyAHaEK&pid=Api&P=0&h=180"
+                                alt="Desafio-Semanal">
+                        </div>
+                        <div class="info4">
+                            <h2>El reto da la semana</h2>
+                            <p>El nuevo reta semanal ya se nos fue revelado, para esta ocasion el desafio trata de la escasez de escondites dandole una gran dificultad a la supervivencia</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="./media/objetos/camara-1.png" alt="">
-                </div>
-            </div>
-            <div>
-                <h2>hola</h2>
-                <img src="./media/objetos/emf-1.png" alt="">
-            </div>
-            <div>
-                <h2>hola</h2>
-                <img src="./media/objetos/dots-2.png" alt="">
             </div>
         </section>
-
     </main>
 
- 
+
+
 </body>
 
 
