--- a/pages/evidencias.html
+++ b/pages/evidencias.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="Pagina de guias y noticias del juego Phasmophobia">
+    <meta name="keywords" content="Juegos, Guias, Tutoriales, Noticias, Phasmophobia, Fantasmas, Sobrenatural, Paranormal, Terror, Miedo, Muertos, Español">
     <title>Resumen</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
