--- a/pages/guias.html
+++ b/pages/guias.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="Pagina de guias y noticias del juego Phasmophobia">
+    <meta name="keywords" content="Juegos, Guias, Tutoriales, Noticias, Phasmophobia, Fantasmas, Sobrenatural, Paranormal, Terror, Miedo, Muertos, Español">
     <title>Fantasmas</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -21,7 +22,7 @@
     </header>
 
 
-    <main>
+    <main class="main-5">
 
         <section>
 
